--- a/styles/General.css
+++ b/styles/General.css
@@ -5,12 +5,13 @@
 }
 body{
     background: #f5f5f5;
+    max-width: 100dvw;
 }
 
 .overBackground{
     margin: 18dvh auto 5dvh ;
     backdrop-filter: blur(5px);
-    width: clamp(600px, 80%, 1000px);
+    width: clamp(300px, 80dvw, 1000px);
     height: max-content;
     padding: 20px;
     border-radius: 2%;
@@ -24,15 +25,17 @@ body{
     position: fixed;
     top: 0;
     width: 100%;
+    margin: auto;
     background: transparent;
     backdrop-filter: blur(10px);
     padding: 10px;
     a{
+        min-width: 0;
         background: #c3c782da;
         flex: 1;
         text-align: center;
-        font-size: 2dvw;
-        padding: 15px;
+        font-size: clamp(6px, 1.8dvw, 18px);
+        padding: 1dvw;
         border: 1px solid black;
         border-radius: 5%;
         color: #192132;
@@ -67,9 +70,9 @@ p{
     margin: 20px 0px 0px 10px;
 }
 .center{
-    margin-top: 30px;
+    margin: 30px auto 0;
     text-align: center;
     display: block;
     width: 100%;
-     font-size: clamp(10px, 3dvw, 20px);
+    font-size: clamp(10px, 3dvw, 20px);
 }
