--- a/styles/General.css
+++ b/styles/General.css
@@ -14,9 +14,9 @@ body{
     width: clamp(300px, 80dvw, 1000px);
     height: max-content;
     padding: 20px;
-    border-radius: 2%;
+    border-radius: 2dvw;
     background: white;
-    box-shadow:2px 2px 10px 0 black;
+    box-shadow:1px 1px 5px 0 #202020;
 }
 .menu{
     z-index: 10;
@@ -43,7 +43,7 @@ body{
     }
     a:hover{
         background-color: #293142;
-        border-bottom: 5px solid black;
+        border-bottom: 2px solid black;
         color: #e3e5f2;
         text-shadow: 1px 1px black, 1px -1px black, -1px 1px black, -1px -1px black;
     }
