--- a/styles/General.css
+++ b/styles/General.css
@@ -11,7 +11,7 @@ body{
 .overBackground{
     margin: 18dvh auto 5dvh ;
     backdrop-filter: blur(5px);
-    width: clamp(300px, 80dvw, 1000px);
+    width: clamp(400px, 85dvw, 1200px);
     height: max-content;
     padding: 20px;
     border-radius: 2dvw;
@@ -61,6 +61,7 @@ body{
     margin: 50px 0px 0px 20px;
 }
 ul{
+    list-style-type: square;
     font-size: clamp(10px, 3dvw, 25px);
     margin: 20px 0px 0px 20px;
     padding: 15px 20px;
@@ -83,14 +84,12 @@ p{
 }
 .header{
 
-    width: 90dvw;
-    margin: 30px auto;
+    width: clamp(400px, 90dvw, 1000px);
+    margin: 100px auto;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 30px;
     font-size: clamp(10px, 4dvw, 25px);
-    padding: 2dvw;
-    box-shadow:1px 1px 5px 0 #202020;
 
 
     span{
